--- a/_config.yml
+++ b/_config.yml
@@ -27,9 +27,7 @@ title:                 Hydejack
 # A short description (~150 chars) of the page used for the meta description tag.
 # Can use markdown, but no more than one paragraph (enforced by `>`)
 description:           >
-  A Jekyll theme with JavaScript powers. "Best Theme by a Mile".
-  Combines the best of static sites and modern web apps.
-  Open `_config.yml` to edit this text.
+  Ph.D Candidate in Seoul National University
 
 # A shorter description for the sidebar.
 tagline:               >
@@ -39,8 +37,8 @@ tagline:               >
 # A list of keywords for your blog
 keywords:              []
 
-# Used by jekyll-seo-tag...
-logo:                  /assets/icons/icon.png
+# Used by jekyll-seo-tag... /assets/icons/icon.png
+logo:                  yanghachung.jpg
 
 # This should be the same author as first entry in `_data/authors.yml`.
 # Duplication is necessary due to the `jekyll-feed`, `jekyll-seo-tag` plugin.
@@ -51,7 +49,7 @@ author:
   # twitter:             <username>
 
 # This text will appear in a `<small>` tag in the footer of every page.
-copyright:             © 2017. All rights reserved.
+copyright:             © 2020. All rights reserved.
 
 # Add links to the footer.
 # Typically you'll want to link to your impress, cookies or privacy policy, etc.
