--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -8,11 +8,7 @@ author1:
   # Used at the bottom of each page and at the top of the `about` layout
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
   about:             |
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-
-    Open `_data/authors.yml` to edit this text.
+    Hello, my name is Yangha Chung! I am a Ph.D Candidate in Seoul National University. 
 
   # This photo will be used in the about section
   picture:
@@ -26,9 +22,9 @@ author1:
   # Comment/uncommet to show/hide
   # Rearrange to change the order in which they appear
   social:
-    twitter:         <username>
-    github:          <username>
-    # email:           mailto:<mail@domain.tld>
+    # twitter:         <username>
+    github:          <yangha08>
+    email:           mailto:<yangha08@snu.ac.kr>
     # rss:             https://<url>/feed.xml
     # facebook:        <username>
     # google:          <number>
