--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baseurl:               ''
 lang:                  en
 
 # The title of your blog. Used in the sidebar and the browser tab.
-title:                 Yangha Chung
+title:                 Yangha Chung's Blog
 
 # A short description (~150 chars) of the page used for the meta description tag.
 # Can use markdown, but no more than one paragraph (enforced by `>`)
@@ -42,8 +42,8 @@ logo:                  yanghachung.jpg
 # This should be the same author as first entry in `_data/authors.yml`.
 # Duplication is necessary due to the `jekyll-feed`, `jekyll-seo-tag` plugin.
 author:
-  name:                <firstname> <lastname>
-  email:               <mail@domain.tld>
+  name:                <Yangha> <Chung>
+  email:               <yangha08@snu.ac.kr>
   # Used by `jekyll-seo-tag`:
   # twitter:             <username>
 
