--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -23,7 +23,7 @@ author1:
   # Rearrange to change the order in which they appear
   social:
     # twitter:         <username>
-    github:          <yangha08>
+    github:          yangha08
     email:           mailto:<yangha08@snu.ac.kr>
     # rss:             https://<url>/feed.xml
     # facebook:        <username>
